--- a/src/index.html
+++ b/src/index.html
@@ -49,8 +49,8 @@
       </a>
       <div class="nav-links">
         <ul>
-          <li><a href="#">GitHub</a></li>
-          <li><a href="#">LinkedIn</a></li>
+          <li><a>GitHub</a></li>
+          <li><a>LinkedIn</a></li>
         </ul>
       </div>
     </nav>
