Footer formatting and addition of contact form.

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,8 @@
 
   <!-- Todo: read the following HTML Todos to create your stunning portfolio website -->
   <body>
-    <nav id="top" class="nav-bar">
+    <div id="top"></div>
+    <nav class="nav-bar">
       <div class="nav-my-name">Richard Lowther</div>
       <a class="toggle-button">
         <span class="bar"></span>
@@ -49,8 +50,16 @@
       </a>
       <div class="nav-links">
         <ul>
-          <li><a>GitHub</a></li>
-          <li><a>LinkedIn</a></li>
+          <li>
+            <a rel="noreferrer" href="#!" target="_blank">
+              <i class="fa fa-github fa-inverse"></i>
+            </a>
+          </li>
+          <li>
+            <a rel="noreferrer" href="#!" target="_blank">
+              <i class="fa fa-linkedin fa-inverse"></i>
+            </a>
+          </li>
         </ul>
       </div>
     </nav>
@@ -310,13 +319,10 @@
         </a>
         <div class="social-links">
           <a rel="noreferrer" href="#!" target="_blank">
-            <i class="fa fa-twitter fa-inverse"></i>
+            <i class="fa fa-github fa-inverse"></i>
           </a>
           <a rel="noreferrer" href="#!" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
-          </a>
-          <a rel="noreferrer" href="#!" target="_blank">
-            <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
 
@@ -327,30 +333,6 @@
           © 2023 by
           <a rel="noreferrer" href="https://github.com/cobidev" target="_blank"
             >Richard Lowther</a
-          >
-        </p>
-
-        <!-- TO DO: remove this entire paragraph once you finish your portfolio -->
-        <p class="mt-3 pt-3">
-          <a
-            rel="noreferrer"
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio/fork"
-            data-icon="octicon-repo-forked"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Fork ntkme/github-buttons on GitHub"
-            >Fork</a
-          >
-          <a
-            rel="noreferrer"
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio"
-            data-icon="octicon-star"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Star cobidev/simplefolio on GitHub"
-            >Star</a
           >
         </p>
       </div>
