--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
     ></script>
 
     <!-- Todo: remove the below script once you finish your portfolio -->
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
+    <!-- <script async defer src="https://buttons.github.io/buttons.js"></script> -->
   </head>
 
   <!-- Todo: read the following HTML Todos to create your stunning portfolio website -->
@@ -51,12 +51,12 @@
       <div class="nav-links">
         <ul>
           <li>
-            <a rel="noreferrer" href="#!" target="_blank">
+            <a rel="noreferrer" href="https://github.com/Rich5656?tab=overview&from=2023-04-01&to=2023-04-18S" target="_blank">
               <i class="fa fa-github fa-inverse"></i>
             </a>
           </li>
           <li>
-            <a rel="noreferrer" href="#!" target="_blank">
+            <a rel="noreferrer" href="https://www.linkedin.com/in/richard-lowther-6a56b7161" target="_blank">
               <i class="fa fa-linkedin fa-inverse"></i>
             </a>
           </li>
@@ -95,8 +95,6 @@
           </div>
         </div>
       </div>
-      
-     
     </section>
 
     <!-- **** Projects Section **** -->
@@ -281,14 +279,6 @@
         <h2 class="section-title contact-title">Think I'd be a good fit on the team?</h2>
         <h2 class="section-title contact-title contact-header">Contact</h2>
         <div class="contact-wrapper load-hidden">
-          <!-- <p class="contact-wrapper__text">[Put your call to action here]</p>
-          <a
-            rel="noreferrer"
-            target="_blank"
-            class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
-            >Call to Action</a
-          > -->
           <form name="contact" id="contact-form" method="POST" data-netlify="true">
             <p>
               <label for="name">Name</label>
@@ -318,20 +308,19 @@
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
         <div class="social-links">
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://github.com/Rich5656?tab=overview&from=2023-04-01&to=2023-04-18" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://www.linkedin.com/in/richard-lowther-6a56b7161" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
         </div>
 
         <hr />
 
-        <!-- Notice: if you want to give me some credit, it will be huge for me! if not, put your data on it -->
         <p class="footer__text">
           © 2023 by
-          <a rel="noreferrer" href="https://github.com/cobidev" target="_blank"
+          <a rel="noreferrer" href="https://github.com/Rich5656?tab=overview&from=2023-04-01&to=2023-04-18" target="_blank"
             >Richard Lowther</a
           >
         </p>
