Added in link to CV

--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,11 @@
       <div class="nav-links">
         <ul>
           <li>
+            <a class='' rel="noreferrer" href="assets/Richard_Lowther_Resume_Web.pdf" target="_blank">
+              CV
+            </a>
+          </li>
+          <li>
             <a rel="noreferrer" href="https://github.com/Rich5656?tab=overview&from=2023-04-01&to=2023-04-18S" target="_blank">
               <i class="fa fa-github fa-inverse"></i>
             </a>
@@ -56,7 +61,7 @@
           I'm a <span class="text-emphasis">Software Developer</span> who has a passion for solving problems in a way that is practical and useful to end users.
           Whether it is automating repetitive tasks for my employer, creating a web application to help make business decisions
           more clear and trackable, or simply working on a personal project, I'm always excited to dive into the weeds of the problem
-          and figure out how I can make my solution easy to understand for the end user.
+          and figure out how I can arrive at a solution that is easy to understand for the end user.
           <br/>
           <br/>
           Thank you for taking some time to look at my portfolio!
@@ -115,9 +120,9 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="#!"
+                  href="https://github.com/Rich5656/related-artist-highlight"
                 >
-                  Source Code
+                  github
                 </a>
               </div>
             </div>
@@ -172,9 +177,9 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="#!"
+                  href="https://github.com/Rich5656/nutrition-app"
                 >
-                  Source Code
+                  github
                 </a>
               </div>
             </div>
