--- a/src/index.html
+++ b/src/index.html
@@ -169,7 +169,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="https://nutrition-tracker-react-app.netlify.app/"
                 >
                   See Live
                 </a>
@@ -185,7 +185,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
+                <a rel="noreferrer" href="https://nutrition-tracker-react-app.netlify.app/" target="_blank">
                   <div
                     data-tilt
                     data-tilt-max="4"
