Added in related-artist-highlight links and fixed some clumsy wording

--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,7 @@
               <li><span class="text-emphasis">Javascript:</span> React.js, Node.js, Express.js</li>
               <li><span class="text-emphasis">Database:</span> PostgreSQL</li>
               <li><span class="text-emphasis">Pyhton:</span> Pandas, Streamlit</li>
-              <li><span class="text-emphasis">Genreal:</span> OOP, HTML, CSS, SASS, Bootstrap</li>
+              <li><span class="text-emphasis">Genreal:</span> Git, OOP, HTML, CSS, SASS, Bootstrap</li>
             </ul>
           </div>
         </div>
@@ -112,7 +112,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="https://github.com/Rich5656/related-artist-highlight"
                 >
                   Try it out!
                 </a>
@@ -128,7 +128,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
+                <a rel="noreferrer" href="https://github.com/Rich5656/related-artist-highlight" target="_blank">
                   <div
                     data-tilt
                     data-tilt-max="4"
@@ -158,7 +158,7 @@
                     This app allows users to calculate their needed calories for the day, search and add the amount of food that they have consumed so far,
                     and track calories burned form exercise. All of this data is presented in a table to let the user know where they are with their nutrition for the day.
                     I used this as an opportunity to create site features that allow a user's actions to trigger API reuqests
-                    and also explored React's Context API for managing global state that can be accessed/updated from
+                    while also exploring React's Context API for managing global state that is accessible from
                     any component in the application.
                   </p>
                   <p>
