Fixed spacing under skills

--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,7 @@
               <li><span class="text-emphasis">Javascript:</span> React.js, Node.js, Express.js</li>
               <li><span class="text-emphasis">Database:</span> PostgreSQL</li>
               <li><span class="text-emphasis">Pyhton:</span> Pandas, Streamlit</li>
-              <li><span class="text-emphasis">Genreal:</span> Git, OOP, HTML, CSS, SASS, Bootstrap</li>
+              <li><span class="text-emphasis">Genreal:</span> Git, OOP, HTML, CSS, SASS</li>
             </ul>
           </div>
         </div>
